--- a/.gitmodules
+++ b/.gitmodules
@@ -5,3 +5,6 @@
 	path = Source/OmniThreadLibrary
 	url = https://github.com/Kridselot/OmniThreadLibrary
 	branch = master
+[submodule "Tools"]
+	path = Tools
+	url = https://github.com/Kridselot/Tools.git
